<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_navigation.xml"
    app:startDestination="@id/loginScreenFragment">

    <fragment
        android:id="@+id/loginScreenFragment"
        android:name="com.sallyjayz.shoestore.screens.LoginScreenFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginScreenFragment_to_welcomeScreenFragment"
            app:destination="@id/welcomeScreenFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/welcomeScreenFragment"
        android:name="com.sallyjayz.shoestore.screens.WelcomeScreenFragment"
        android:label="@string/welcome">
        <action
            android:id="@+id/action_welcomeScreenFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.sallyjayz.shoestore.screens.InstructionFragment"
        android:label="@string/instruction">
        <action
            android:id="@+id/action_instructionFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/welcomeScreenFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/shoeListingFragment"
        android:name="com.sallyjayz.shoestore.screens.shoelisting.ShoeListingFragment"
        android:label="@string/shoe">
        <action
            android:id="@+id/action_shoeListingFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <argument
            android:name="currentShoeDetail"
            app:argType="com.sallyjayz.shoestore.model.Shoe" />


    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.sallyjayz.shoestore.screens.shoedetail.ShoeDetailFragment"
        android:label="@string/shoe_detail" >

        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>

    </fragment>
</navigation>