<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.InstructionFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/instruction_txt_one"
            style="@style/TextViewStyle"
            android:text="@string/instruction"
            android:padding="@dimen/tendp"
            android:layout_marginBottom="@dimen/fortydp"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/shop_btn"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/instruction_txt_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/twentysp"
            android:textStyle="bold|italic"
            android:layout_marginBottom="@dimen/thirtydp"
            android:text="@string/instruction_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instruction_txt_one"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shop_btn"
            style="@style/Widget.App.Button"
            android:text="@string/start_shopping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/fortydp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>